--- a/nicolasgoguillon/css/timeline.css
+++ b/nicolasgoguillon/css/timeline.css
@@ -19,7 +19,7 @@
     /* (B1) DRAW THE TIMELINE */
     content: '';
     width: 5px;
-    background-color: #17A697;
+    background-color: #22427C;
     /* (B2) POSITION IT TO THE LEFT */
     position: absolute;
     top: 0;
@@ -30,7 +30,7 @@
   /* (C) STYLES FOR THE EVENTS */
   div.event {
     padding: 20px 30px;
-    background-color: #b2f7d4;
+    background-color: lightblue;
     position: relative;
     border-radius: 6px;
     margin-bottom: 10px;
@@ -54,7 +54,7 @@
   div.event::before {
     content: '';
     border: 10px solid transparent;
-    border-right-color: #b2f7d4;
+    border-right-color: lightblue;
     border-left: 0;
     position: absolute;
     top: 20%;
@@ -65,7 +65,7 @@
   div.event::after {
     content: '';
     background: #fff;
-    border: 4px solid #17A697;
+    border: 4px solid #22427C;
     width: 16px;
     height: 16px;
     border-radius: 50%;
