--- a/css/modif.css
+++ b/css/modif.css
@@ -126,3 +126,7 @@ iframe{
 .bleuclair{
     color:lightblue !important;
 }
+
+.shadow{
+    box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+}
