--- a/css/styles.css
+++ b/css/styles.css
@@ -11500,12 +11500,11 @@ html {
 }
 
 .footer {
-  padding-top: 5rem;
-  padding-bottom: 5rem;
-  background-color: #2c3e50;
+  padding-top: 2rem;
+  background-color: #293133;
   color: #fff;
 }
 
 .copyright {
-  background-color: #1a252f;
+  background-color: #293133;
 }
