--- a/css/modif.css
+++ b/css/modif.css
@@ -130,3 +130,10 @@ iframe{
 .shadow{
     box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
 }
+
+.precision {
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+    padding-bottom: 45px;
+}
